--- a/style.css
+++ b/style.css
@@ -216,5 +216,37 @@ h3 {
     border-color: #9b59b6
 }
 
+.item-container {
+    position: relative;
+    top: 40px;
+    left: 50px;
+    width: 400px;
+    height: 600px;
+    color: white;
+    padding: 20px;
+    border-color: gray;
+    border-style: groove;
+}
+
+.item-container .img {
+    position: absolute;
+}
+
+.item-container .info-box {
+    position: relative;
+    width: 350px;
+    height: 200px;
+    background-color: black;
+}
+
+.item-container .info-box .description {
+    position: absolute;
+    width: 200px;
+    height: 160px;
+    margin-top: 20px;
+    margin-left: 20px;
+    background-color: yellow;
+    color: black;
+}
 
 
