--- a/style.css
+++ b/style.css
@@ -229,24 +229,29 @@ h3 {
 }
 
 .item-container .img {
-    position: absolute;
+    position: relative;
+    right: 23px;
+    bottom: 23px;
 }
 
 .item-container .info-box {
     position: relative;
-    width: 350px;
+    width: 400px;
     height: 200px;
-    background-color: black;
+    right: 23px;
+    bottom: 27px;
 }
 
-.item-container .info-box .description {
+.item-container .info-box .name {
     position: absolute;
-    width: 200px;
+    width: 400px;
     height: 160px;
-    margin-top: 20px;
-    margin-left: 20px;
-    background-color: yellow;
+    
     color: black;
 }
 
-
+.item-container .info-box .price {
+    color: red;
+    position: relative;
+    top: 5px;
+}
